fix: fixed image shifting

--- a/style.css
+++ b/style.css
@@ -63,6 +63,7 @@ header img {
 }
 .card img{
     width: 100%;
+    display: block;
 }
 .card .image-hover{
     display: none;
